modified pom.xml to use the proper project's version